flask/weatherinfo/multi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: multi-ingress
spec:
   rules:
   - http:
       paths:
       - path: /
         backend:
           serviceName: nginx
           servicePort: 80
       - path: /weather
         backend:
           serviceName: climate
           servicePort: 8080
       - path: /wapi
         backend:
           serviceName: climate
           servicePort: 8080
